[gd_scene load_steps=2 format=3 uid="uid://dwp056svuqcek"]

[ext_resource type="Script" uid="uid://ctycprd145t8p" path="res://scripts/main_menu.gd" id="1_yqorp"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 207.0
offset_top = 108.0
offset_right = 207.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqorp")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="LeftPanel" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/LeftPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CharacterRect" type="TextureRect" parent="MarginContainer/HBoxContainer/LeftPanel/CenterContainer"]
layout_mode = 2

[node name="RightPanel" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/HBoxContainer/RightPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 100
theme_override_constants/v_separation = 100
columns = 2

[node name="QuestButton" type="Button" parent="MarginContainer/HBoxContainer/RightPanel/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "クエスト"

[node name="SoloBattleButton" type="Button" parent="MarginContainer/HBoxContainer/RightPanel/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "ソロバトル"

[node name="NetBattleButton" type="Button" parent="MarginContainer/HBoxContainer/RightPanel/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "ネット対戦"

[node name="DeckButton" type="Button" parent="MarginContainer/HBoxContainer/RightPanel/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "アルバム"

[node name="SettingsButton" type="Button" parent="MarginContainer/HBoxContainer/RightPanel/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "設定"

[node name="ShopButton" type="Button" parent="MarginContainer/HBoxContainer/RightPanel/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "ショップ"
